--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  
+  "homepage": "https://ThapaVinay.github.io/myNoteBook",
   "name": "inotebook",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "concurrently": "^8.2.0",
     "cors": "^2.8.5",
+    "gh-pages": "^5.0.0",
     "i": "^0.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,6 +22,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
