--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
     "concurrently": "^8.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "gh-pages": "^5.0.0",
     "i": "^0.3.7",
     "react": "^18.2.0",
